MB-2114 Remove moveTaskOrderID parameter from endpoint
