# swagger/support.yaml
@@ -113,14 +113,8 @@ paths:
         - contracting_officer
         - ppm_office_users
       summary: Gets a move task order by ID
-  '/move_task_orders/{moveTaskOrderID}/mto_shipments/{shipmentID}/status':
+  '/mto-shipments/{shipmentID}/status':
     parameters:
-      - description: ID of move task order for mto shipment to use
-        in: path
-        name: moveTaskOrderID
-        required: true
-        format: uuid
-        type: string
       - description: ID of the shipment
         in: path
         name: shipmentID
